--- a/minigame-template-main/.gitignore
+++ b/minigame-template-main/.gitignore
@@ -64,3 +64,6 @@ crashlytics-build.properties
 
 # Ignore the Assets Folder
 /[Mm]inigame-template-main/Assets/Imports
+
+# Ignore ProjectSettings Folder
+/[Mm]inigame-template-main/ProjectSettings/*
